fixed text overflow on big monitors, making responsive
added a trial setting for small monitors, needs work

--- a/styles-solarized.css
+++ b/styles-solarized.css
@@ -232,12 +232,13 @@ body {
     border-radius: 1dvw;
     height: 0;
     transition: height 0.5s;
+    overflow: auto;
 }
 
 #exampleSummary {
     display: none;
-    overflow: hidden;
     margin: 2dvh 1dvw;
+    font-size: 1dvw;
 }
 
 .fadeIn {
@@ -311,5 +312,16 @@ body {
 
     .imgBotR:hover {
         transform-origin: left top;
+    }
+}
+
+@media (min-aspect-ratio: 2/1) and (max-height:700px) {
+    #exampleSummary {
+        font-size: 1dvw;
+    }
+
+    .exampleImage {
+        width: 30dvh;
+        height: auto;
     }
 }
